@@ -2,9 +2,10 @@
 <xmi:XMI xmlns:uml="http://www.omg.org/spec/UML/20110701"
          xmlns:StandardProfile="http://www.omg.org/spec/UML/20131001/StandardProfile"
          xmlns:xmi="http://www.omg.org/spec/XMI/20110701"
-         xmlns:SysML="http://www.omg.org/spec/SysML/20131001/SysML.xmi">
+         xmlns:SysML="http://www.omg.org/spec/SysML/20131001/SysML.xmi"
+         xmlns:LocalProfile="https://github.com/awarnke/crystal_facet_uml/2021">
          <!-- XMI 2.4.1, UML 2.4.1, SysML 1.4 -->
-    <xmi:Documentation exporter="crystal-facet-uml" exporterVersion="1.27.0"/>
+    <xmi:Documentation exporter="crystal-facet-uml" exporterVersion="1.28.1"/>
     <uml:Model xmi:type="uml:Model" xmi:id="00000" name="export_test_11_class" >
         <packagedElement xmi:type="uml:Class" xmi:id="60001" name="Cow" ><!--C0001-->
             <ownedAttribute xmi:type="uml:Property" xmi:id="40001" name="num_horns" aggregation="composite" >
@@ -33,13 +34,6 @@
             </ownedEnd>
         </packagedElement>
         <packagedElement xmi:type="uml:Class" xmi:id="60002" name="Grass" ><!--C0002-->
-            <!-- note: export of stereotypes is subject to change -->
-            <ownedComment xmi:type="uml:Comment" xmi:id="60002#stereotype" >
-                <body>
-                    environment
-                </body>
-                <annotatedElement xmi:idref="60002" />
-            </ownedComment>
         </packagedElement>
         <packagedElement xmi:type="uml:Association" xmi:id="80003" name="" >
             <memberEnd xmi:idref="80003#sourceend" />
@@ -56,4 +50,5 @@
         <packagedElement xmi:type="uml:Class" xmi:id="60004" name="Roots" ><!--C0004-->
         </packagedElement>
     </uml:Model>
+    <LocalProfile:environment xmi:id="160002#environment" base_Class="60002" />
 </xmi:XMI>
