@@ -2,9 +2,10 @@
 <xmi:XMI xmlns:uml="http://www.omg.org/spec/UML/20110701"
          xmlns:StandardProfile="http://www.omg.org/spec/UML/20131001/StandardProfile"
          xmlns:xmi="http://www.omg.org/spec/XMI/20110701"
-         xmlns:SysML="http://www.omg.org/spec/SysML/20131001/SysML.xmi">
+         xmlns:SysML="http://www.omg.org/spec/SysML/20131001/SysML.xmi"
+         xmlns:LocalProfile="https://github.com/awarnke/crystal_facet_uml/2021">
          <!-- XMI 2.4.1, UML 2.4.1, SysML 1.4 -->
-    <xmi:Documentation exporter="crystal-facet-uml" exporterVersion="1.27.0"/>
+    <xmi:Documentation exporter="crystal-facet-uml" exporterVersion="1.28.1"/>
     <uml:Model xmi:type="uml:Model" xmi:id="00000" name="export_test_18_usecase" >
         <packagedElement xmi:type="uml:Component" xmi:id="60001" name="Customer Support" ><!--C0001-->
             <ownedUseCase xmi:type="uml:UseCase" xmi:id="60003" name="Complain" ><!--C0003-->
